<resources>
    <string name="app_name">MindPeace</string>
    <string name="nav_home">HOME</string>
    <string name="nav_befo">BEFO</string>
    <string name="nav_contact">CONTACT</string>
    <string name="nav_follo">FOLLO</string>
    <string name="nav_setting">SETTING</string>
    <string name="nav_delete">DELETE </string>
    <string name="nav_about">ABOUT</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_maps">Map</string>
    <string name="sos">SOS</string>
    <string name="NewTrip">Start A Trip</string>
    <string name="MapTrip">Map Trip</string>
    <string name="logheading">Welcome to MindPeace</string>
    <string name="logemail">Email</string>
    <string name="logpassword">Password</string>
    <string name="logbtn">Login</string>
    <string name="regbtn">Register</string>
    <string name="regheading">Welcome to MindPeace</string>
    <string name="regemail">Email</string>
    <string name="regpassword">Password</string>
    <string name="regbtnreal">Click to Finish</string>
    <!--<string name="app_name">NavDrawer</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MindPeace</string>
    <string name="nav_header_subtitle">gappmakersde@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toregpage">Click here to register!</string>
    <string name="profileheading">profile page</string>
    <string name="backtomain">Back To Main Page</string>
    <string name="sosyes">Yes </string>
    <string name="sosno">No </string>
    <string name="sosheading">SEND SOS ?</string>
    <string name="homeheading">Hello, Welcome to </string>
    <string name="homebtsbefo">START A NEW TRIP</string>
    <string name="homebtsfollo">TRIPS FOLLOWING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settingheading">Setting Page</string>
    <string name="contactheading">CONTACT</string>
    <string name="folloheading">You Are Following</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="aboutheading">ABOUT</string>
    <string name="setthres">Refresh Every</string>
    <string name="setthres2">Minutes</string>
    <string name="settingbtn">SAVE</string>
    <string name="activatetrip">START</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
