<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_befo"
            android:icon="@drawable/befo"
            android:title="@string/nav_befo" />
        <item
            android:id="@+id/nav_follo"
            android:icon="@drawable/follo"
            android:title="@string/nav_follo" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/nav_setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/contact"
                android:title="@string/nav_contact" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
